--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Short stories, Italian'
 - !lcsh 'Fiction'
+- GITenberg
 tableOfContents: Leuma e Lia -- Il cuore del passero -- Le ostriche di San Damiano
   -- Nella terra dei santi e dei poeti -- Le vicende del signor X*** e della signorina
   Y*** -- I tre casi del signor avvocato -- La bicicletta di Ninì -- Il primo viaggio
